--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
       <button id="search-btn">검색</button>
       <button id="scan-btn" class="secondary">예열 스캔(+8% 이상)</button>
     </div>
+   <div id="spikeSets"></div>
+ 
     <div class="toolbar">
       <small id="zz-upbit-ts" class="muted">⏳ 데이터 준비중…</small>
     </div>
