--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <input id="search" type="text" placeholder="코인명을 입력하세요 (예: 비트코인 / 이더리움 / 도지)">
       <button id="search-btn">검색</button>
       <button id="scan-btn" class="secondary">예열 스캔(+8% 이상)</button>
+   <div id="spikeSets"></div>
+   
     </div>
    <div id="spikeSets"></div>
  
