--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
-  <header>
-    <h1>🔥 사토시의지갑 🔥</h1>
-    <p>업비트/빗썸 실시간 급등·급락 코인 탐지 시스템</p>
-  </header>
+<header class="top">
+  <div class="container">
+    <h1 class="app-title">💎 사토시의지갑</h1>
+    <p class="subtitle">AI 기반 매수·매도 타점 및 예열탐지 시스템</p>
+  </div>
+</header>
+  
 
   <!-- 🔍 검색란 -->
   <section id="search-section">
