--- a/index.html
+++ b/index.html
@@ -3,29 +3,45 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>사토시의지갑 - 업비트 실시간 시세</title>
-  <link rel="stylesheet" href="/css/style.css" />
+  <title>💎 사토시의지갑</title>
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-<header class="top">
-  <div class="container">
-    <h1 class="app-title">💎 사토시의지갑</h1>
-    <p class="subtitle">AI 기반 매수·매도 타점 및 예열탐지 시스템</p>
-  </div>
-</header>
-  
 
-  <!-- 🔍 검색란 -->
+  <!-- 💎 헤더 -->
+  <header class="top">
+    <div class="container">
+      <h1 class="app-title">💎 사토시의지갑</h1>
+      <p class="subtitle">AI 기반 매수·매도 타점 및 예열·급등·급락 탐지 시스템</p>
+    </div>
+  </header>
+
+  <!-- 🔍 검색 영역 -->
   <section id="search-section">
     <input id="search" placeholder="코인명/심볼 입력 (예: 비트, BTC)" />
     <button id="search-btn" class="primary">검색</button>
     <button id="scan-btn" class="secondary">예열 스캔(+8%)</button>
   </section>
 
-  <!-- 🔥 급등/급락 한세트 -->
-  <div id="spikeSets"></div>
+  <!-- ♨️ 예열/가열 코인 -->
+  <section id="warm-section">
+    <h2>♨️ 예열/가열 코인</h2>
+    <div id="warmCoins" class="warm-grid"></div>
+  </section>
 
-  <!-- 📊 결과 테이블 -->
+  <!-- 🔥 급등/급락 한세트 -->
+  <section id="spikeSets" class="spike-wrapper">
+    <div class="spike-box">
+      <h3>🔥 급등 한세트</h3>
+      <div id="spikeUpList"></div>
+    </div>
+    <div class="spike-box">
+      <h3>⚠️ 급락 한세트</h3>
+      <div id="spikeDownList"></div>
+    </div>
+  </section>
+
+  <!-- 📊 메인 테이블 -->
   <section id="table-section">
     <small id="zz-upbit-ts" class="muted">📈 데이터 준비중...</small>
     <table id="coin-table" class="coin-table">
@@ -44,11 +60,6 @@
     </table>
   </section>
 
-  <!-- 오류 / 로딩 -->
-  <div id="loading" class="hidden">🔄 데이터 갱신 중...</div>
-  <div id="errorMsg" class="hidden"></div>
-
-  <!-- 🔗 main.js 연결 -->
   <script src="/js/main.js"></script>
 </body>
 </html>
