--- a/index.html
+++ b/index.html
@@ -57,7 +57,21 @@
       <tbody id="mainTbody">
         <tr><td colspan="5">⏳ 로딩 중...</td></tr>
       </tbody>
-    </table>
+  <table class="table">
+  <thead>
+    <tr>
+      <th>코인명</th>
+      <th>현재가</th>
+      <th>매수1</th>
+      <th>매도1</th>
+      <th>상태</th>
+    </tr>
+  </thead>
+  <tbody id="coinsTbody">
+    <tr id="loadingRow"><td colspan="5">⏳ 로딩 중...</td></tr>
+  </tbody>
+</table>
+  
   </section>
 
   <script src="/js/main.js"></script>
