--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
     </tr>
   </thead>
   <tbody id="coinsTbody">
+    <script type="module" src="./js/main.js"></script>
+</body>
+</html>
+
     <tr id="loadingRow"><td colspan="5">⏳ 로딩 중...</td></tr>
   </tbody>
 </table>
@@ -75,7 +79,7 @@
   </section>
 
   <script src="/js/main.js"></script>
-</body>
+<>
  <script type="module" src="./js/main.js"></script>
  
 </html>
