--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
     <table id="coin-table" class="coin-table">
       <thead>
         <tr>
-          <th>코인명</th><th>현재가</th><th>매수1</th><th>매도1</th><th>상태</th>
+          <th>코인명</th>
+          <th>현재가</th>
+          <th>매수1</th>
+          <th>매도1</th>
+          <th>상태</th>
         </tr>
       </thead>
       <tbody id="coinsTbody">
@@ -58,7 +62,7 @@
     </table>
   </section>
 
-  <!-- 반드시 한 줄만! (중복 금지) -->
+  <!-- 반드시 한 줄만! -->
   <script type="module" src="./js/main.js"></script>
 </body>
 </html>
