--- a/index.html
+++ b/index.html
@@ -64,5 +64,7 @@
 
   <!-- 반드시 한 줄만! -->
   <script type="module" src="./js/main.js"></script>
+  <script src="./js/fullset_pro.js"></script>
+<script src="./js/fullset_search.js"></script>
 </body>
 </html>
