--- a/index.html
+++ b/index.html
@@ -68,3 +68,11 @@
 <script src="./js/fullset_search.js"></script>
 </body>
 </html>
+<!-- 기존: 절대 건드리지 않음 (페이지 본문/표/검색창 유지) -->
+
+<!-- ▼▼ 파일 끝나기 직전, body 닫기 전에 딱 3줄만 남기기 ▼▼ -->
+<script type="module" src="./js/main.js"></script>   <!-- 기존 기능 유지 -->
+<script src="./js/fullset_pro.js"></script>          <!-- 새: 정밀 타점 엔진 -->
+<script src="./js/fullset_search.js"></script>       <!-- 새: 검색→전체표 채움 -->
+</body>
+</html>
