--- a/index.html
+++ b/index.html
@@ -74,5 +74,11 @@
 <script type="module" src="./js/main.js"></script>   <!-- 기존 기능 유지 -->
 <script src="./js/fullset_pro.js"></script>          <!-- 새: 정밀 타점 엔진 -->
 <script src="./js/fullset_search.js"></script>       <!-- 새: 검색→전체표 채움 -->
+<script type="module" src="./js/main.js"></script>
+<script src="./js/fullset_pro.js"></script>
+<script src="./js/fullset_search.js"></script>
+</body>
+</html>
+
 </body>
 </html>
