--- a/index.html
+++ b/index.html
@@ -149,5 +149,188 @@
 
     observeTable();
   </script>
+<!-- ====== BEGIN: 붙여넣기 (기존코드 유지 + 기능추가/오류복구) ====== -->
+<script>
+(() => {
+  /** ✅ 안전가드: 이미 주입했다면 재주입 방지 */
+  if (window.__upbitPatchV1) return;
+  window.__upbitPatchV1 = true;
+
+  /* DOM 핸들 */
+  const $ = (sel) => document.querySelector(sel);
+  const $$ = (sel) => Array.from(document.querySelectorAll(sel));
+
+  const $status = (function () {
+    // 연결 상태 표시용: 없으면 자동으로 만들기
+    let el = document.querySelector('.connection-status');
+    if (!el) {
+      const p = document.createElement('small');
+      p.className = 'connection-status muted';
+      p.style.marginLeft = '8px';
+      p.textContent = '연결 준비중...';
+      const header = document.querySelector('.subtitle, #connStatus') || document.querySelector('h1, header, body');
+      header && header.appendChild(p);
+      el = p;
+    }
+    return el;
+  })();
+
+  const $searchInput = $('#searchInput') || $('input[placeholder*="코인명"]') || $('input[type="search"]');
+  const $searchBtn   = $('#searchBtn')   || $('#search-btn') || $('button.primary, button:contains("검색")');
+  const $tbody       = $('#coinsTbody')  || document.querySelector('tbody#coinsTbody') || document.querySelector('#coinsTBody') || document.querySelector('section #coinsTbody');
+  // 로딩 행(없으면 자동 생성)
+  let $loadingRow = document.querySelector('#loadingRow');
+  if (!$loadingRow && $tbody) {
+    const tr = document.createElement('tr');
+    tr.id = 'loadingRow';
+    tr.innerHTML = `<td colspan="9">⏳ 로딩 중...</td>`;
+    $tbody.appendChild(tr);
+    $loadingRow = tr;
+  }
+
+  /** 공용: 숫자 포맷 / 위험도 / 밴드명 */
+  const fmt = (n) => Number(n||0).toLocaleString('ko-KR');
+  const band = (pct) => (pct >= 8 ? '가열' : pct >= 3 ? '예열' : pct <= -3 ? '냉각' : '안정');
+  const risk = (pct, spike = 0) => {
+    const abs = Math.abs(pct) + Math.min(Math.abs(spike), 5);
+    if (abs < 2) return 1;
+    if (abs < 5) return 2;
+    if (abs < 8) return 3;
+    if (abs < 15) return 4;
+    return 5;
+  };
+  const until = (ts) => {
+    const d = Math.max(0, Date.now() - (Number(ts)||0));
+    const s = Math.floor(d/1000), m = Math.floor(s/60);
+    return (m ? `${m}분 ` : '') + `${s%60}초`;
+  };
+
+  /** 업비트 마켓/이름 맵 */
+  let nameMap = null; // { "BTC": {market:"KRW-BTC", ko:"비트코인", en:"Bitcoin"} , ... }
+  async function ensureMarkets() {
+    if (nameMap) return nameMap;
+    const r = await fetch('/api/upbit?type=markets', { headers: {Accept:'application/json'} });
+    const js = await r.json();
+    if (!js.ok) throw new Error('markets 응답 실패');
+    const map = {};
+    js.data.forEach(it => {
+      try {
+        // KRW-만 취급(원화마켓 우선)
+        if (!/^KRW-/.test(it.market)) return;
+        const sym = it.market.split('-')[1];
+        map[sym] = { market: it.market, ko: it.korean_name, en: it.english_name };
+      } catch {}
+    });
+    nameMap = map;
+    return map;
+  }
+
+  /** 티커 조회 */
+  async function fetchTicker(market) {
+    const r = await fetch(`/api/upbit?type=ticker&markets=${encodeURIComponent(market)}`, { headers: {Accept:'application/json'} });
+    const js = await r.json();
+    if (!js.ok) throw new Error('ticker 응답 실패');
+    const t = Array.isArray(js.data) ? js.data[0] : js.data;
+    return t;
+  }
+
+  /** 행 보장 */
+  function ensureRow() {
+    if (!$tbody) return null;
+    let tr = $tbody.querySelector('tr.__result');
+    if (!tr) {
+      tr = document.createElement('tr');
+      tr.className = '__result';
+      // 표 헤더가 다음 순서라고 가정: 코인명 | 현재가 | 변동률 | 상태 | 위험도 | 예열시간 | 예열종류시간 | 쩔어결론
+      tr.innerHTML = `
+        <td class="c-sym">-</td>
+        <td class="c-price">-</td>
+        <td class="c-pct">-</td>
+        <td class="c-state">-</td>
+        <td class="c-risk">-</td>
+        <td class="c-preheat">-</td>
+        <td class="c-pretype">-</td>
+        <td class="c-final">대기</td>
+      `;
+      if ($loadingRow) $loadingRow.remove();
+      $tbody.appendChild(tr);
+    }
+    return tr;
+  }
+
+  /** 화면 갱신 */
+  function renderRow(sym, info, t) {
+    const tr = ensureRow();
+    if (!tr) return;
+    const rpct = Number(t.signed_change_rate||0)*100;
+    const st = band(rpct);
+    const rlv = risk(rpct);
+    const zzu = (st === '예열' && rpct >= 2) ? '단기상승(매수)' :
+                (st === '예열')               ? '관망' :
+                (st === '가열' && rpct >= 8) ? '과열주의' :
+                (st === '냉각' && rpct <= -3)? '진입주의' : '관망';
+
+    tr.querySelector('.c-sym').textContent    = `${info.ko||sym} (${sym})`;
+    tr.querySelector('.c-price').textContent  = fmt(t.trade_price);
+    tr.querySelector('.c-pct').textContent    = `${(rpct).toFixed(2)}%`;
+    tr.querySelector('.c-state').textContent  = st;
+    tr.querySelector('.c-risk').textContent   = rlv;
+    tr.querySelector('.c-preheat').textContent= until(t.ts||Date.now());
+    tr.querySelector('.c-pretype').textContent= st === '예열' ? '지속' : '-';
+    tr.querySelector('.c-final').textContent  = zzu;
+  }
+
+  /** 검색 처리 */
+  async function handleSearch(raw) {
+    try {
+      $status.textContent = '🔌 연결 확인중...';
+      const map = await ensureMarkets();
+      $status.textContent = '✅ 연결 완료';
+
+      const q = (raw||'').trim().toUpperCase();
+      if (!q) return;
+      // 심볼/한글/영문 모두 매칭
+      let sym = null;
+      if (map[q]) sym = q;
+      else {
+        const found = Object.entries(map).find(([s, v]) =>
+          (v.ko||'').toUpperCase().includes(q) ||
+          (v.en||'').toUpperCase().includes(q));
+        if (found) sym = found[0];
+      }
+      if (!sym) {
+        alert('일치하는 코인을 찾지 못했습니다.');
+        return;
+      }
+      const market = map[sym].market;
+      const t = await fetchTicker(market);
+      renderRow(sym, map[sym], t);
+    } catch (e) {
+      console.error(e);
+      $status.textContent = '❌ 연결 오류 – 새로고침/재시도';
+    }
+  }
+
+  /** 이벤트 연결 (기존 코드와 충돌하지 않게 addEventListener만 사용) */
+  if ($searchBtn)  $searchBtn.addEventListener('click', () => handleSearch($searchInput?.value));
+  if ($searchInput) $searchInput.addEventListener('keydown', (e) => {
+    if (e.key === 'Enter') handleSearch($searchInput.value);
+  });
+
+  /** 첫 연결 테스트(표 “로딩 중…”만 보일 때 연결 상태 갱신) */
+  (async () => {
+    try {
+      await ensureMarkets();
+      $status.textContent = '✅ 연결 완료';
+    } catch (e) {
+      console.warn('초기 연결 실패', e);
+      $status.textContent = '❌ 연결 실패';
+    }
+  })();
+
+})();
+</script>
+<!-- ====== END: 붙여넣기 (기존코드 유지 + 기능추가/오류복구) ====== -->
+
 </body>
 </html>
