--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
     <button id="searchBtn" class="primary">검색</button>
     <!-- 🔍 검색 결과 테이블: 검색창 바로 아래 -->
 <div id="searchResult" style="margin-top:20px;">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>코인명</th>
-        <th>현재가</th>
-        <th>변동률</th>
-        <th>상태</th>
-        <th>위험도</th>
-        <th>예열시간</th>
-        <th>예열종류시간</th>
-        <th>쩔어결론</th>
-      </tr>
-    </thead>
+ <thead>
+  <tr>
+    <th>코인명</th>
+    <th>현재가</th>
+    <th>매수가</th>
+    <th>매도가</th>
+    <th>익절가</th>
+    <th>위험도</th>
+    <th>예열시작</th>
+    <th>예열종류</th>
+    <th>쩔어결론</th>
+  </tr>
+</thead>
+ 
     <tbody id="resultBody">
       <tr>
         <td colspan="8" style="text-align:center;color:var(--muted);">
