--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@ import { startUpbitRealtime } from "./js/upbit_ws.js";
     paint(elH, heating);
   });
 </script>
+<script type="module" src="./js/fullset_search.js"></script>
 
 </body>
 </html>
