--- a/index.html
+++ b/index.html
@@ -388,6 +388,10 @@ import { startUpbitRealtime } from "./js/upbit_ws.js";
   });
 </script>
 <script type="module" src="./js/fullset_search.js"></script>
+<!-- ⚙️ 스크립트 순서 중요! -->
+<script type="module" src="./js/main.js"></script>
+<script type="module" src="./js/fullset_pro.js"></script>
+<script type="module" src="./js/fullset_search.js"></script>
 
 </body>
 </html>
